ensure content and right panel are always aligned to top

--- a/admin-base/materialize/custom/_workspace.scss
+++ b/admin-base/materialize/custom/_workspace.scss
@@ -181,6 +181,7 @@
 		}
 	}
 	.right-panel {
+		vertical-align: top;
 		display: inline-block;
 		height: 100%;
 		position: relative;
